--- a/example/home.html
+++ b/example/home.html
@@ -7,7 +7,7 @@
         
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js" integrity="sha512-v8ng/uGxkge3d1IJuEo6dJP8JViyvms0cly9pnbfRxT6/31c3dRWxIiwGnMSWwZjHKOuY3EVmijs7k1jz/9bLA==" crossorigin="anonymous"></script>
-        <script crossorigin="anonymous" src="https://prostgles.com/prostgles-client-js/index.js" type="text/javascript" type="module"></script>	
+        <script crossorigin="anonymous" src="https://rawcdn.githack.com/prostgles/prostgles-client-js/d8487f63357e0e9cda6b5f5d888a1c595938b3f5/dist/index.js" type="text/javascript" type="module"></script>	
 	</head>
 	<body>
 
