--- a/example-typescript/home.html
+++ b/example-typescript/home.html
@@ -7,19 +7,13 @@
         
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="https://unpkg.com/socket.io-client@2.3.0/dist/socket.io.slim.js" type="text/javascript"></script>
-        <script src="https://unpkg.com/prostgles-client@1.0.1/dist/index.js" type="text/javascript"></script>	
+        <script src="https://unpkg.com/prostgles-client@latest/dist/prostgles.js" type="text/javascript"></script>	
 	</head>
 	<body>
 
 		<script>
             
-            const socket = io({
-                // query: "dawdwa",
-                'reconnection': true,
-                'reconnectionDelay': 1000,
-                'reconnectionDelayMax' : 5000,
-                'reconnectionAttempts': 5 
-            });
+            const socket = io();
             socket.on("home", console.log)
 
             prostgles({
