--- a/examples/full-example-typescript/home.html
+++ b/examples/full-example-typescript/home.html
@@ -7,7 +7,7 @@
         
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="https://unpkg.com/socket.io-client@2.3.0/dist/socket.io.slim.js" type="text/javascript"></script>
-        <script src="https://unpkg.com/prostgles-client@latest/dist/prostgles.js" type="text/javascript"></script>	
+        <script src="https://unpkg.com/prostgles-client@latest/dist/index.js" type="text/javascript"></script>	
 	</head>
 	<body>
 
@@ -19,7 +19,7 @@
             prostgles({
                 socket, 
                 isReady: (db, methods) => {
-                    db.pixels.find({}).then(console.log)
+                    db.planes.find().then(console.log)
                 },
                 onDisconnect: (err, res) => {
                     // location.reload();
