--- a/examples/full-example-vanilla/home.html
+++ b/examples/full-example-vanilla/home.html
@@ -5,20 +5,31 @@
 	<head>
         <title> Prostgles </title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <script src="https://unpkg.com/socket.io-client@2.3.0/dist/socket.io.slim.js" type="text/javascript"></script>
-        <script src="https://unpkg.com/prostgles-client@1.0.13/dist/prostgles.dev.js" type="text/javascript"></script>	
+        <script src="https://unpkg.com/socket.io-client@latest/dist/socket.io.slim.js" type="text/javascript"></script>
+        <script src="https://unpkg.com/prostgles-client@latest/dist/index.js" type="text/javascript"></script>	
 	</head>
-	<body>
+    <body style="margin: 0;">
+        <style>
+            html, body {
+                margin: 0;
+                padding: 0;
+                width: 100%;
+                height: 100%;
+                overflow: hidden;
+            }
+            * {
+                box-sizing: border-box;
+            }
+        </style>
         
-        <div class="wrapper"></div>
         <canvas id="canvas" width="100%" height="100%"></canvas>
 		<script>
             
-            const socket = io();
+            const socket = io({ path: "/teztz" });
 
             prostgles({
                 socket, 
-                isReady: async (db, methods) => {
+                onReady: async (db, methods) => {
                     window.db = db;
                     initCanvas(db);
                     try {
@@ -37,18 +48,18 @@
                 }
             });
 
-            function initCanvas(dbo){
+            async function initCanvas(dbo){
                 var canvas = document.getElementById('canvas');
                 var ctx = canvas.getContext('2d');
 
-                dbo.points.delete({});
+                await dbo.Points.delete({});
 
-                const ps = dbo.points.getSync({});
-                ps.subscribeAll(draw);
+                const ps = await dbo.Points.sync({}, draw);
+                // ps.subscribeAll(draw);
                 // dbo.points.subscribe({}, { orderBy: "id", select: ["x", "y", "color", "id"] }, draw)
 
                 function draw(points){
-                    console.log(points)
+                    console.log(points.length, "Points")
                     if(points && points.length > 1){
                         ctx.beginPath();
                         ctx.moveTo(points[0].x, [points[0].y]);
@@ -70,8 +81,8 @@
 
 
                 // window.onload = function() {
-                    var width  = window.innerWidth;
-                    var height = window.innerHeight;
+                    var width  = document.body.offsetWidth;
+                    var height = document.body.offsetHeight;
                     canvas.height = height;
                     canvas.width = width;
                     canvas.addEventListener('mousedown', function(e) {
