--- a/examples/full-example-vanilla/home.html
+++ b/examples/full-example-vanilla/home.html
@@ -5,7 +5,7 @@
 	<head>
         <title> Prostgles </title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <script src="https://unpkg.com/socket.io-client@latest/dist/socket.io.slim.js" type="text/javascript"></script>
+        <script src="https://unpkg.com/socket.io-client@3.0.3/dist/socket.io.min.js" type="text/javascript"></script>
         <script src="https://unpkg.com/prostgles-client@latest/dist/index.js" type="text/javascript"></script>	
 	</head>
     <body style="margin: 0;">
