fix exists bugs

--- a/tests/index.html
+++ b/tests/index.html
@@ -3,16 +3,15 @@
 	<head>
 		<title> Prostgles </title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<script src="https://unpkg.com/socket.io-client@2.3.1/dist/socket.io.slim.js" type="text/javascript"></script>
+		<!-- <script src="https://unpkg.com/socket.io-client@2.3.1/dist/socket.io.slim.js" type="text/javascript"></script> -->
+		<script src="https://unpkg.com/socket.io-client@3.0.3/dist/socket.io.min.js" type="text/javascript"></script>
 		<script src="https://unpkg.com/prostgles-client@latest/dist/index.js" type="text/javascript"></script>
 	</head>
 	<body>
 		<script>
-			localStorage.debug = '*';
-			localStorage.debug = 'socket.io-client:socket';
 
 			prostgles({
-				socket: io(), //({ path: "/teztz" }), // or simply io()
+				socket: io({ path: "/teztz" }), // or simply io()
 				onReady: async (db, methods) => {
 					db.items.subscribe({}, {}, items => {
 						document.body.innerText = JSON.stringify(items);
