fix aggregation & join bugs

--- a/tests/index.html
+++ b/tests/index.html
@@ -17,6 +17,7 @@
 						document.body.innerText = JSON.stringify(items);
 					});
 					window.db = db;
+					window.dbo = db;
 				}
 			});
 		</script>
