--- a/tests/config_test/index.html
+++ b/tests/config_test/index.html
@@ -9,6 +9,11 @@
 		<script src="https://unpkg.com/prostgles-client@latest/dist/index.js" type="text/javascript"></script>
 	</head>
 	<body>
+
+		<div style="display: flex; flex-direction: row;">
+			<div class="d1"></div>
+			<div class="d2"></div>
+		</div>
 		<script>
 
 			console.time("test")
@@ -49,13 +54,19 @@
 						window.dbo = db;
 						window.s = socket;
 
-						let schema = await Promise.all(Object.keys(db).filter(t => db[t].find).map(async t => ({
-							table: t,
-							cols: await db[t].getColumns()
-						})))
-						console.log("onReady", schema);
+						// let schema = await Promise.all(Object.keys(db).filter(t => db[t].find).map(async t => ({
+						// 	table: t,
+						// 	cols: await db[t].getColumns()
+						// })))
+						// console.log("onReady", schema);
 
-						document.body.innerText = JSON.stringify(schema, null, 2)
+						db.various.subscribe({ $and: [] }, {}, d => {
+							document.body.querySelector(".d1").innerText = JSON.stringify(d, null, 2)
+						})
+						db.various.subscribe({ "id.<": 75648356348 }, {}, d => {
+							document.body.querySelector(".d2").innerText = JSON.stringify(d, null, 2)
+						})
+
 					} catch(e) {
 						console.error(e)
 					}
