--- a/tests/config_test/index.html
+++ b/tests/config_test/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- <script src="https://unpkg.com/socket.io-client@2.3.1/dist/socket.io.slim.js" type="text/javascript"></script> -->
 	
-		<script src="https://unpkg.com/socket.io-client@3.1.0/dist/socket.io.min.js" type="text/javascript"></script>
+		<script src="https://unpkg.com/socket.io-client@latest/dist/socket.io.min.js" type="text/javascript"></script>
 		<script src="https://unpkg.com/prostgles-client@latest/dist/index.js" type="text/javascript"></script>
 	</head>
 	<body>
@@ -15,6 +15,8 @@
 			<div class="d2"></div>
 			<div class="d3"></div>
 		</div>
+		<input type="file">
+		<button>txt</button>
 		<script defer>
 
 			console.time("test")
@@ -28,7 +30,8 @@
 			// })
 			const log = console.log;
 
-			const socket = io("wss://prostgles.com", { path: "/teztz/s", reconnect: true });
+				//	wss://prostgles.com
+			const socket = io({ path: "/teztz/s", reconnect: true });
 
 			
 			// socket.on("connected", () => {
@@ -64,14 +67,37 @@
 						// console.log("onReady", schema);
 						const d1 = document.body.querySelector(".d1"),
 							d2 = document.body.querySelector(".d2"),
-							d3 = document.body.querySelector(".d3");
+							d3 = document.body.querySelector(".d3"),
+							inpt = document.body.querySelector("input"),
+							btn = document.body.querySelector("button");
 
-						db.various.subscribe({ $and: [] }, {}, d => {
-							if(d1) d1.innerText = JSON.stringify(d, null, 2)
-						})
-						db.various.subscribe({ "id.<": 75648356348 }, {}, d => {
-							if(d2) d2.innerText = JSON.stringify(d, null, 2)
-						})
+						inpt.onchange = e => {
+							const files = Array.from(e.target.files).map(f => ({
+								data: f,
+								name: f.name,
+							}));
+							db.media.insert(files)
+						}
+
+						btn.onclick = e => {
+							var enc = new TextEncoder(); // always utf-8
+							data = enc.encode("str");
+							db.various.insert({ media: { data, name: "dawdaw.txt" }})
+						}
+
+
+						db.media.subscribe({  }, { }, d => {
+							if(d1){ 
+								d1.innerText = JSON.stringify(d, null, 2);
+								d1.onclick = () => window.location = (d[0].url);
+							}
+						});
+						// db.various.subscribe({  }, { select: { id: 1, media: "*"} }, d => {
+						// 	if(d1){ 
+						// 		d1.innerText = JSON.stringify(d, null, 2);
+						// 		d1.onclick = () => window.location = (d[0].url);
+						// 	}
+						// });
 
 					} catch(e) {
 						console.error(e)
