fix nested insert

--- a/tests/config_test/index.html
+++ b/tests/config_test/index.html
@@ -86,12 +86,12 @@
 						}
 
 
-						db.media.subscribe({  }, { }, d => {
-							if(d1){ 
-								d1.innerText = JSON.stringify(d, null, 2);
-								d1.onclick = () => window.location = (d[0].url);
-							}
-						});
+						// db.media.subscribe({  }, { }, d => {
+						// 	if(d1){ 
+						// 		d1.innerText = JSON.stringify(d, null, 2);
+						// 		d1.onclick = () => window.location = (d[0].url);
+						// 	}
+						// });
 						// db.various.subscribe({  }, { select: { id: 1, media: "*"} }, d => {
 						// 	if(d1){ 
 						// 		d1.innerText = JSON.stringify(d, null, 2);
